2011-12-29  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot.c src/plot.h src/qtterminal/qt_term.cpp:
	Provide a function cancel_history() that can be called by terminal
	helper functions after forking so that the history file isn't 
	trashed on exit.
	Bug #2950711

2011-12-28  Ethan A Merritt  <merritt@u.washington.edu>

	* src/qtterminal/QtGnuplotEvent.h src/qtterminal/QtGnuplotItems.cpp
 	src/qtterminal/QtGnuplotItems.h src/qtterminal/QtGnuplotScene.cpp
 	src/qtterminal/QtGnuplotScene.h src/qtterminal/qt_term.cpp term/qt.trm:

	Organize Qt display list items into groups, one group per plot.
	Track display area of keybox entries so that mouse clicks there can
	toggle the visibility of the corresponding plot group.
	NB: Doesn't work if the key box is set to opaque.

	* docs/gnuplot.doc share/Makefile.am share/colors_default.gp
	share/colors_mono.gp share/colors_podo.gp share/gnuplotrc
	src/Makefile.am:
	Provide template initialization files, including examples of customizing
	the linetype color sequence.  These are installed in $GNUPLOT_SHARE_DIR.

	* src/command.c src/datafile.c src/help.c src/history.c src/misc.c
	src/plot.c src/plot.h src/term.c src/variable.c:
	Do not allow execution of system(), shell, or popen() commands in the
	initialization files.

	* src/plot.c src/show.c: More compact splash page.

	* configure.in: Default to --enable-stats --without-bitmap-terminals

	* Remove obsolete interface shim intergraph.x11

	* src/graphics.c src/graphics.h src/graph3d.c:
	Strangely, the final parameter of place_objects(,,,clip_area) was
	(1) never used and (2) shadowed a global parameter that _was_ used.
	Bug #3426247

2011-12-25  Ethan A Merritt  <merritt@u.washington.edu>

	* src/qtterminal/QtGnuplotEvent.cpp src/qtterminal/QtGnuplotScene.cpp:
	If two button release events occur in quick succession then the program
	messes up the event handling and winds up in a non-recoverable state.
	Apply an empirical fix to ignore events in a 300 msec window.